k8s/ytdlp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ytdlp-web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: youtube.able256.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ytdlp-web
                port:
                  number: 80
  # tls:
  #   - hosts:
  #       - youtube.able256.com
  #     secretName: youtube-able256-com-tls
